# x402-kit

./: Cargo.toml  README.md
.github/workflows/: ci.yml
x402-client/: Cargo.toml
x402-core/: Cargo.toml
x402-core/src/types/: extensions.rs
x402-extensions/: Cargo.toml
x402-extensions/src/: bazaar.rs  sign_in_with_x.rs
x402-kit/: Cargo.toml
x402-kit/examples/: actix_web_seller.rs  axum_seller.rs
x402-kit/src/: lib.rs
x402-kit/src/networks/: evm.rs  mod.rs  svm.rs
x402-kit/src/schemes/: exact_evm.rs  exact_svm.rs  mod.rs
x402-networks/: Cargo.toml
x402-networks/src/: lib.rs
x402-networks/src/evm/: exact.rs  mod.rs
x402-networks/src/svm/: exact.rs  mod.rs
x402-paywall/: Cargo.toml
x402-paywall/src/: processor.rs
x402-signer/: Cargo.toml
x402-signer/examples/: evm_client.rs  svm_keypair.rs  svm_swig_delegation.rs  svm_swig_embedded.rs
x402-signer/src/: client.rs  errors.rs  lib.rs  middleware.rs  selector.rs  signer.rs
x402-signer/src/evm/: constants.rs  eip3009.rs  mod.rs  permit2.rs  signer.rs  types.rs  wallet.rs
x402-signer/src/svm/: constants.rs  mod.rs  rpc.rs  rpc_client.rs  signer.rs  transaction.rs  types.rs  wallet.rs
x402-signer/src/swig/: delegation.rs  embedded.rs  mod.rs  transaction.rs
x402-signer/tests/: signing.rs
