[package]
name = "x402-extensions"
version.workspace = true
edition = "2024"
repository = "https://github.com/AIMOverse/x402-kit"
authors = ["Archer <archer@aimo.network>"]
license = "MIT"
description = "(V2 Supported) X402 protocol extension types for resource discovery and modular functionality."

[dependencies]
x402-core = { version = "2.4.1", path = "../x402-core" }
bon = { version = "3.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
schemars = { version = "1.0" }
